# insiculous_2d

./: .gitignore  ACTION_PLAN.md  AGENTS.md  CLAUDE.md  Cargo.toml  GPU_DIAGNOSTICS_README.md  PATTERNS_AUDIT.md  PERFECT_SPRITE_DEMO.md  PROJECT_ROADMAP.md  README.md  REALITY_CHECK_SUMMARY.md  SPRITE_DEBUG_SUMMARY.md  SPRITE_FIX_CHECKLIST.md  SPRITE_RENDERING_TRACKER.md  TECH_DEBT.md  VULKAN_FORCE_README.md  VULKAN_FORCE_SUCCESS.md  debug_ui_interaction_fix.md  log_archive.md  run_gpu_diagnostics.sh  test_ui_interaction.rs  training.md  validate_demo.sh
.claude/: settings.json
coordination/: BLOCKERS.md  PROGRESS.md  TODO.md
crates/audio/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/audio/src/: audio_player.rs  error.rs  lib.rs  manager.rs  sound.rs
crates/ecs/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/ecs/benches/: ecs_benchmark.rs
crates/ecs/src/: archetype.rs  audio_components.rs  behavior.rs  component.rs  component_registry.rs  entity.rs  entity_builder.rs  event.rs  generation.rs  hierarchy.rs  hierarchy_extension.rs  hierarchy_system.rs  lib.rs  lifetime.rs  prelude.rs  query.rs  resource.rs  sprite_components.rs  sprite_system.rs  state_machine.rs  system.rs  tilemap.rs  world.rs
crates/ecs/tests/: component.rs  entity.rs  entity_generation.rs  hierarchy_dirty.rs  init.rs  sprite_components.rs  system.rs  system_lifecycle.rs  world.rs
crates/editor/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/editor/src/: asset_browser.rs  behavior_editor.rs  collider_overlay.rs  commands.rs  component_editors.rs  context.rs  dock.rs  drag_drop.rs  editable_inspector.rs  editor_input.rs  editor_preferences.rs  field_style.rs  file_operations.rs  gizmo.rs  gizmo_math.rs  grid.rs  hierarchy.rs  inspector.rs  layout.rs  lib.rs  menu.rs  picking.rs  play_controls.rs  play_state.rs  selection.rs  status_bar.rs  stored_component.rs  texture_field.rs  theme.rs  toolbar.rs  typography.rs  viewport.rs  viewport_input.rs  world_snapshot.rs
crates/editor/src/commands/: component_commands.rs  entity_commands.rs  mod.rs  set_commands.rs  tests.rs
crates/editor/src/context/: mod.rs  tests.rs
crates/editor_integration/: CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/editor_integration/src/: constants.rs  editor_game.rs  entity_ops.rs  entity_ops_tests.rs  lib.rs  panel_renderer.rs
crates/editor_integration/src/editor_game/: menu_actions.rs  mod.rs  scene_io.rs  shortcuts.rs  tests.rs  viewport_interaction.rs
crates/editor_integration/src/panel_renderer/: asset_browser.rs  inspector.rs  mod.rs  tests.rs
crates/engine_core/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/engine_core/src/: achievements.rs  application.rs  assets.rs  behavior.rs  behavior_data.rs  behavior_runner.rs  chaos_mode.rs  chaos_theme.rs  contexts.rs  debug.rs  engine.rs  events.rs  game.rs  game_config.rs  game_loop.rs  game_loop_manager.rs  game_object.rs  game_state.rs  gamepad_backend.rs  glyph_texture_cache.rs  input_settings_io.rs  lib.rs  lifecycle.rs  menu_input.rs  menu_panel.rs  pause.rs  pickups.rs  prelude.rs  render_manager.rs  scene.rs  scene_data.rs  scene_loader.rs  scene_manager.rs  scene_saver.rs  scene_serializer.rs  spawn_helpers.rs  state_stack.rs  texture_ref.rs  tilemap_render.rs  time.rs  (+5 more)
crates/engine_core/src/game/: render.rs
crates/engine_core/src/grid/: grid_mesh.rs  impulse.rs  mod.rs
crates/engine_core/src/particles/: emitter.rs  manager.rs  mod.rs  particle.rs  system.rs
crates/engine_core/tests/: behavior_optimization.rs  camera_follow.rs  game_loop.rs  init.rs  lifecycle.rs  prefab_spawning.rs  scene_lifecycle.rs  scene_loader_parse.rs  scene_runs.rs  timing.rs  world.rs
crates/insiculous_2d/: Cargo.toml
crates/insiculous_2d/src/: lib.rs
crates/physics/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/physics/src/: components.rs  lib.rs  physics_system.rs  physics_world.rs  prelude.rs  presets.rs  system.rs  world.rs
crates/physics/src/physics_system/: mod.rs  sync.rs  tests.rs  update.rs
crates/physics/src/physics_world/: bodies.rs  mod.rs  queries.rs  stepping.rs  tests.rs
crates/physics/tests/: ball_brick_bounce.rs  external_edits.rs
crates/renderer/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/renderer/src/: accessors.rs  application.rs  atlas.rs  bloom.rs  clear.rs  core.rs  egui.rs  error.rs  lib.rs  line_pipeline.rs  prelude.rs  render_pipeline_inspector.rs  render_targets.rs  renderer.rs  sprite.rs  sprite_animator.rs  sprite_data.rs  texture.rs  window.rs
crates/renderer/src/shaders/: bloom_blur.wgsl  bloom_composite.wgsl  bloom_extract.wgsl  debug_no_transform.wgsl  line.wgsl  sprite.wgsl  sprite_instanced.wgsl  sprite_instanced_backup.wgsl
crates/renderer/src/sprite/: batch.rs  instance_cache.rs  pipeline.rs
crates/renderer/tests/: error.rs  init.rs  renderer.rs  simple_sprite_test.rs  sprite_batching.rs  sprite_data.rs  texture_system.rs  window.rs
crates/ui/: ANALYSIS.md  CLAUDE.md  Cargo.toml  TECH_DEBT.md
crates/ui/src/: context.rs  draw.rs  font.rs  input_state.rs  interaction.rs  lib.rs  rect.rs  style.rs  text_edit.rs
crates/ui/src/context/: mod.rs  tests.rs  text.rs  text_input.rs  widgets.rs
crates/ui/src/font/: glyph_cache.rs  layout.rs  mod.rs
crates/ui/tests/: ui_interaction_debug.rs
examples/: README_VERTEX_SCALE_TESTS.md  VERTEX_SCALE_TESTS.md  VERTEX_SCALE_TEST_SUMMARY.md  behavior_demo.rs  clean_sprite_demo.rs  colored_quad.wgsl  debug_sprite_demo.rs  debug_sprite_visibility.rs  depth_fix_test.rs  ecs_optimization_demo.rs  editor_demo.rs  emergency_visibility_test.rs  final_sprite_test.rs  fullscreen_magenta_test.rs  hello_world.rs  index_debug_test.rs  input_demo.rs  minimal_sprite_test.rs  minimal_triangle.wgsl  minimal_triangle_test.rs  ndc_quad_test.rs  pipeline_comparison_test.rs  pipeline_debug_test.rs  playable_demo.rs  presentation_mode_test.rs  quick_visibility_test.rs  scene_intro.rs  shader_passthrough_test.rs  shader_validation_test.rs  simple_sprite_demo.rs  sprite_demo.rs  sprite_render_diagnostic_v2.rs  test_lifecycle.rs  (+11 more)
(+74 files in other folders)
