[package]
name    = "insiculous_2d"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/engine_core",
    "crates/renderer",
    "crates/ecs",
    "crates/ecs_macros",
    "crates/input",
    "crates/physics",
    "crates/audio",
    "crates/ui",
    "crates/editor",
]

[workspace.dependencies]
# Internal crates
common = { path = "crates/common" }

# Common dependencies
log = "0.4"
env_logger = "0.11"
wgpu = "28.0"
winit = "0.30"
thiserror = "2.0"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"
ron = "0.12.0"
glam = { version = "0.30.10", features = ["serde"] }
bytemuck = { version = "1.21", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }

[dependencies]
engine_core = { path = "crates/engine_core" }
ecs = { path = "crates/ecs" }
editor = { path = "crates/editor" }
ui = { path = "crates/ui" }
common = { path = "crates/common" }
glam = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

# Examples
[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "editor_demo"
path = "examples/editor_demo.rs"
