[package]
name = "ecs"
version = "0.1.0"
edition = "2021"
description = "Simple entity-component-system for the insiculous_2d game engine"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
glam = "0.29"
renderer = { path = "../renderer" }

[dev-dependencies]
pollster = { workspace = true }
criterion = "0.5"

[[bench]]
name = "ecs_benchmark"
harness = false