[package]
name = "ecs"
version = "0.1.0"
edition = "2021"
description = "Simple entity-component-system for the insiculous_2d game engine"

[dependencies]
common = { workspace = true }
ecs_macros = { path = "../ecs_macros" }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
glam = { workspace = true }
renderer = { path = "../renderer" }

[dev-dependencies]
pollster = { workspace = true }
criterion = "0.5"
ron = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "ecs_benchmark"
harness = false