[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for the insiculous_2d game engine"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
winit = { workspace = true }
pollster = "0.4.0"
renderer = { path = "../renderer" }
ecs = { path = "../ecs" }
input = { path = "../input" }