[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for the insiculous_2d game engine"

[features]
default = ["physics"]
physics = ["dep:physics"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
winit = { workspace = true }
pollster = "0.4.0"
glam = { version = "0.29", features = ["serde"] }
serde = { workspace = true }
toml = { workspace = true }
ron = { workspace = true }
renderer = { path = "../renderer" }
ecs = { path = "../ecs" }
input = { path = "../input" }
physics = { path = "../physics", optional = true }
audio = { path = "../audio" }