[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
description = "WGPU renderer for the insiculous_2d game engine"

[dependencies]
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
thiserror = { workspace = true }
glam = "0.29"
bytemuck = { version = "1.16", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }

[dev-dependencies]
pollster = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }