[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Immediate-mode UI framework for insiculous_2d game engine"

[dependencies]
common = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
input = { path = "../input" }
fontdue = "0.9"

[dev-dependencies]
env_logger = { workspace = true }
